--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,17 @@
             "stopOnEntry": false,
             "mainClass": "com.ge.healthcare.dose.services.App",
             "args": "",
+            "projectName": "basic-game-framework"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - App",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "console": "internalConsole",
+            "stopOnEntry": false,
+            "mainClass": "com.ge.healthcare.dose.services.App",
+            "args": "",
             "projectName": "docker-sample-service"
         }
     ]
