--- a/pom.xml
+++ b/pom.xml
@@ -64,11 +64,12 @@
     <developerConnection>scm:git:git@github.com:snapgames/dss.git</developerConnection>
     <url>scm:git:https://github.com/snapgames/dss</url>
   </scm>
-  
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <mainClass>com.ge.healthcare.dose.services.App</mainClass>
   </properties>
 
   <dependencies>
@@ -112,6 +113,29 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.5.3</version>
+      </plugin>
+      <!-- Execution -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>${mainClass}</mainClass>
+          <arguments>
+            <!-- to be soon interpreted by a CLI impl. -->
+            <argument>d=1</argument>
+            <argument>w=320</argument>
+            <argument>h=200</argument>
+            <argument>s=2</argument>
+          </arguments>
+        </configuration>
       </plugin>
     </plugins>
   </build>
