--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <project.mainClass>fr.snapgames.bgf.App</project.mainClass>
   </properties>
 
   <dependencies>
@@ -81,7 +82,7 @@
   </dependencies>
 
   <build>
-    <finalName>${project.name}</finalName>
+    <finalName>${project.name}-${project.version}</finalName>
     <plugins>
       <!-- Sources -->
       <plugin>
@@ -98,6 +99,7 @@
           </execution>
         </executions>
       </plugin>
+      
       <!-- Javadoc -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -107,11 +109,40 @@
           <encoding>UTF-8F</encoding>
         </configuration>
       </plugin>
+      
       <!-- Release -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.5.3</version>
+      </plugin>
+      
+      <!-- Execution -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>${project.mainClass}</mainClass>
+          <arguments>
+            <argument>w=320</argument>
+            <argument>h=200</argument>
+            <argument>d=1</argument>
+          </arguments>
+          <systemProperties>
+            <systemProperty>
+              <key>DEBUG</key>
+              <value>1</value>
+            </systemProperty>
+          </systemProperties>
+        </configuration>
       </plugin>
     </plugins>
   </build>
