--- a/pom.xml
+++ b/pom.xml
@@ -1,155 +1,289 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>fr.snapgames.app</groupId>
-  <artifactId>basic-game-framework</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<groupId>fr.snapgames.app</groupId>
+	<artifactId>basic-game-framework</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>Basic Game Framework</name>
-  <url>https://github.com/snapgames/basic-game-framework/</url>
-  <description>This small application is a basic engine to develop a game on the JDK only.</description>
-  <inceptionYear>2018</inceptionYear>
+	<name>Basic Game Framework</name>
+	<url>https://github.com/snapgames/basic-game-framework/</url>
+	<description>This small application is a basic engine to develop a game on the JDK only.</description>
+	<inceptionYear>2018</inceptionYear>
 
-  <prerequisites>
-    <maven>3.5.3</maven>
-  </prerequisites>
+	<prerequisites>
+		<maven>3.5.3</maven>
+	</prerequisites>
 
-  <organization>
-    <name>SnapGames</name>
-    <url>http://snapgames.fr</url>
-  </organization>
+	<organization>
+		<name>SnapGames</name>
+		<url>http://snapgames.fr</url>
+	</organization>
 
-  <developers>
-    <developer>
-      <name>Frédéric Delorme</name>
-      <email>frederic.delorme@snapgames.fr</email>
-      <url>https://snapgames.fr/blog/fred</url>
-      <organization>SnapGames</organization>
-      <organizationUrl>https://snapgames.fr</organizationUrl>
-      <timezone>Europe/Paris</timezone>
-      <roles>
-        <role>architect</role>
-        <role>developer</role>
-        <role>utopist</role>
-      </roles>
-    </developer>
-  </developers>
+	<developers>
+		<developer>
+			<name>Frédéric Delorme</name>
+			<email>frederic.delorme@snapgames.fr</email>
+			<url>https://snapgames.fr/blog/fred</url>
+			<organization>SnapGames</organization>
+			<organizationUrl>https://snapgames.fr</organizationUrl>
+			<timezone>Europe/Paris</timezone>
+			<roles>
+				<role>architect</role>
+				<role>developer</role>
+				<role>utopist</role>
+			</roles>
+		</developer>
+	</developers>
 
-  <issueManagement>
-    <system>GitHub</system>
-    <url>https://github.com/snapgames/dss/issues</url>
-  </issueManagement>
+	<issueManagement>
+		<system>GitHub</system>
+		<url>https://github.com/snapgames/basic-game-framework/issues</url>
+	</issueManagement>
 
-  <ciManagement>
-    <system>Travis CI</system>
-    <url>https://travis-ci.org/snapgames/dss</url>
-    <notifiers>
-      <notifier>
-        <type>mail</type>
-        <sendOnError>true</sendOnError>
-        <sendOnFailure>true</sendOnFailure>
-        <sendOnSuccess>false</sendOnSuccess>
-        <sendOnWarning>false</sendOnWarning>
-        <configuration>
-          <address>ci@snapgames.fr</address>
-        </configuration>
-      </notifier>
-    </notifiers>
-  </ciManagement>
+	<ciManagement>
+		<system>Travis CI</system>
+		<url>https://travis-ci.org/snapgames/basic-game-framework</url>
+		<notifiers>
+			<notifier>
+				<type>mail</type>
+				<sendOnError>true</sendOnError>
+				<sendOnFailure>true</sendOnFailure>
+				<sendOnSuccess>false</sendOnSuccess>
+				<sendOnWarning>false</sendOnWarning>
+				<configuration>
+					<address>ci@snapgames.fr</address>
+				</configuration>
+			</notifier>
+		</notifiers>
+	</ciManagement>
 
-  <scm>
-    <connection>scm:git:git@github.com:snapgames/dss.git</connection>
-    <developerConnection>scm:git:git@github.com:snapgames/dss.git</developerConnection>
-    <url>scm:git:https://github.com/snapgames/dss</url>
-  </scm>
+	<scm>
+		<connection>scm:git:git@github.com:snapgames/basic-game-framework.git</connection>
+		<developerConnection>scm:git:git@github.com:snapgames/basic-game-framework.git</developerConnection>
+		<url>scm:git:https://github.com/snapgames/basic-game-framework</url>
+	</scm>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <project.mainClass>fr.snapgames.bgf.App</project.mainClass>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<project.mainClass>fr.snapgames.bgf.App</project.mainClass>
+	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
-  <build>
-    <finalName>${project.name}-${project.version}</finalName>
-    <plugins>
-      <!-- Sources -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>3.0.1</version>
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>jar-no-fork</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      
-      <!-- Javadoc -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.0.1</version>
-        <configuration>
-          <encoding>UTF-8F</encoding>
-        </configuration>
-      </plugin>
-      
-      <!-- Release -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.5.3</version>
-      </plugin>
+	<build>
+		<finalName>${project.artifactId}-${project.version}</finalName>
+		<plugins>
 
-      <!-- Execution -->
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.6.0</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>java</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <mainClass>${project.mainClass}</mainClass>
-          <arguments>
-            <!-- to be soon interpreted by a CLI impl. -->
-            <argument>d=1</argument>
-            <argument>w=320</argument>
-            <argument>h=200</argument>
-            <argument>s=2</argument>
-          </arguments>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+			<!-- Compilation -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>utf-8</encoding>
+				</configuration>
+			</plugin>
 
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>2.22.0</version>
-      </plugin>
-    </plugins>
-  </reporting>
+			<!-- Sources -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>3.0.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Javadoc -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.0.1</version>
+				<configuration>
+					<encoding>UTF-8F</encoding>
+				</configuration>
+			</plugin>
+
+			<!-- Release -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+			</plugin>
+
+			<!-- -->
+
+			<!-- Execution -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.6.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>${project.mainClass}</mainClass>
+					<arguments>
+						<!-- to be soon interpreted by a CLI impl. -->
+						<argument>d=1</argument>
+						<argument>w=320</argument>
+						<argument>h=200</argument>
+						<argument>s=2</argument>
+					</arguments>
+				</configuration>
+			</plugin>
+
+
+			<!-- License attacher -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>1.12</version>
+				<configuration>
+					<addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
+					<licenseFile>${project.basedir}/src/COPYING</licenseFile>
+					<licenseName>mit</licenseName>
+					<thirdPartyFilename>LICENSE</thirdPartyFilename>
+				</configuration>
+				<executions>
+					<execution>
+						<id>update-file-header</id>
+						<goals>
+							<goal>update-file-header</goal>
+						</goals>
+						<phase>process-sources</phase>
+					</execution>
+					<execution>
+						<id>download-licenses</id>
+						<goals>
+							<goal>download-licenses</goal>
+						</goals>
+						<phase>prepare-package</phase>
+					</execution>
+					<execution>
+						<id>add-third-party</id>
+						<goals>
+							<goal>add-third-party</goal>
+						</goals>
+						<phase>prepare-package</phase>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Build executable from jar -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+					<!-- put your configurations here -->
+					<shadedArtifactAttached>true</shadedArtifactAttached>
+					<shadedClassifierName>shaded</shadedClassifierName>
+					<transformers>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<mainClass>${mainClass}</mainClass>
+						</transformer>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+							<resource>src/main/resources/res</resource>
+							<file>server.properties</file>
+						</transformer>
+					</transformers>
+					<!-- end of config -->
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			
+			<!-- create a Windows EXE -->
+			<!-- https://github.com/lukaszlenart/launch4j-maven-plugin/blob/master/src/main/resources/README.adoc -->
+			<!-- see http://launch4j.sourceforge.net/ -->
+			<plugin>
+				<groupId>com.akathist.maven.plugins.launch4j</groupId>
+				<artifactId>launch4j-maven-plugin</artifactId>
+				<version>1.7.23</version>
+				<executions>
+					<execution>
+						<id>l4j-clui</id>
+						<phase>package</phase>
+						<goals>
+							<goal>launch4j</goal>
+						</goals>
+						<configuration>
+							<headerType>gui</headerType>
+							<jar>${project.build.directory}/${project.artifactId}-${project.version}-shaded.jar</jar>
+							<outfile>${project.build.directory}/${project.name}.exe</outfile>
+							<downloadUrl>http://java.com/download</downloadUrl>
+							<classPath>
+								<mainClass>${mainClass}</mainClass>
+								<preCp>anything</preCp>
+							</classPath>
+							<icon>src/main/resources/res/snapgames.ico</icon>
+							<jre>
+								<minVersion>1.8.0</minVersion>
+								<jdkPreference>preferJre</jdkPreference>
+							</jre>
+							<versionInfo>
+								<fileVersion>1.0.0.0</fileVersion>
+								<txtFileVersion>${project.version}</txtFileVersion>
+								<fileDescription>${project.name}</fileDescription>
+								<copyright>${project.inceptionYear} - http://snapgames.fr</copyright>
+								<productVersion>1.0.0.0</productVersion>
+								<txtProductVersion>1.0.0.0</txtProductVersion>
+								<productName>${project.name}</productName>
+								<companyName>SnapGames</companyName>
+								<internalName>${project.name}</internalName>
+								<originalFilename>${project.name}.exe</originalFilename>
+							</versionInfo>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+
+
+
+		</plugins>
+	</build>
+	<!-- Unit Text report generator -->
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.22.0</version>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
