--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,26 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- tests things -->
+    <dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-weld</artifactId>
+      <version>1.2.5</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-junit</artifactId>
+      <version>1.2.5</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-java8</artifactId>
+      <version>1.2.5</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -99,7 +118,7 @@
           </execution>
         </executions>
       </plugin>
-      
+
       <!-- Javadoc -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -109,7 +128,7 @@
           <encoding>UTF-8F</encoding>
         </configuration>
       </plugin>
-      
+
       <!-- Release -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -139,6 +158,41 @@
             <argument>s=2.5</argument>
           </arguments>
         </configuration>
+      </plugin>
+      <!-- Surefire reporting configuratio -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <testFailureIgnore>true</testFailureIgnore>
+          <includes>
+            <exclude>**/*BDDTest.java</exclude>
+          </includes>
+        </configuration>
+      </plugin>
+      <!-- Cucumber reporting -->
+      <plugin>
+        <groupId>net.masterthought</groupId>
+        <artifactId>maven-cucumber-reporting</artifactId>
+        <version>2.0.0</version>
+        <executions>
+          <execution>
+            <id>execution</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <configuration>
+              <projectName>cucumber-jvm-example</projectName>
+              <outputDirectory>${project.build.directory}/site/cucumber-reports</outputDirectory>
+              <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
+              <skippedFails>true</skippedFails>
+              <enableFlashCharts>false</enableFlashCharts>
+              <buildNumber>4</buildNumber>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
