--- a/pom.xml
+++ b/pom.xml
@@ -73,16 +73,23 @@
   </properties>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-simple</artifactId>
+        <version>1.7.25</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>3.8.1</version>
+        <scope>test</scope>
     </dependency>
   </dependencies>
 
   <build>
-    <finalName>${project.name}-${project.version}</finalName>
+    <finalName>${project.artifactId}-${project.version}</finalName>
     <plugins>
       <!-- Sources -->
       <plugin>
