--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ language: java
 jdk:
   - oraclejdk8
 
-#before_install:
-#  - Command to execute before install
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
