--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,35 @@
           <encoding>UTF-8F</encoding>
         </configuration>
       </plugin>
-      
+      <!-- Shaded jar with all dependencies -->
+      <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+				  <!-- put your configurations here -->
+				  <shadedArtifactAttached>true</shadedArtifactAttached>
+                <shadedClassifierName>shaded</shadedClassifierName>
+                <transformers>
+                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <mainClass>${mainClass}</mainClass>
+                    </transformer>
+                    <!--transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+                        <resource>src/main/resources/res</resource>
+                        <file>server.properties</file>
+                    </transformer-->
+                </transformers>
+				  <!-- end of config-->
+				</configuration>
+				<executions>
+				  <execution>
+				    <phase>package</phase>
+				    <goals>
+				      <goal>shade</goal>
+				    </goals>
+				  </execution>
+				</executions>
+      </plugin> 
       <!-- Release -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
