--- a/pom.xml
+++ b/pom.xml
@@ -75,16 +75,16 @@
   <dependencies>
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
     <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-simple</artifactId>
-        <version>1.7.25</version>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.25</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
     <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>3.8.1</version>
-        <scope>test</scope>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -106,7 +106,7 @@
           </execution>
         </executions>
       </plugin>
-      
+
       <!-- Javadoc -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -118,33 +118,78 @@
       </plugin>
       <!-- Shaded jar with all dependencies -->
       <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.2.0</version>
-				<configuration>
-				  <!-- put your configurations here -->
-				  <shadedArtifactAttached>true</shadedArtifactAttached>
-                <shadedClassifierName>shaded</shadedClassifierName>
-                <transformers>
-                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                        <mainClass>${mainClass}</mainClass>
-                    </transformer>
-                    <!--transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <!-- put your configurations here -->
+          <shadedArtifactAttached>true</shadedArtifactAttached>
+          <shadedClassifierName>shaded</shadedClassifierName>
+          <transformers>
+            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+              <mainClass>${mainClass}</mainClass>
+            </transformer>
+            <!--transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
                         <resource>src/main/resources/res</resource>
                         <file>server.properties</file>
                     </transformer-->
-                </transformers>
-				  <!-- end of config-->
-				</configuration>
-				<executions>
-				  <execution>
-				    <phase>package</phase>
-				    <goals>
-				      <goal>shade</goal>
-				    </goals>
-				  </execution>
-				</executions>
-      </plugin> 
+          </transformers>
+          <!-- end of config-->
+        </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- create a Windows EXE -->
+      <!-- https://github.com/lukaszlenart/launch4j-maven-plugin/blob/master/src/main/resources/README.adoc -->
+      <!-- see http://launch4j.sourceforge.net/ -->
+      <plugin>
+        <groupId>com.akathist.maven.plugins.launch4j</groupId>
+        <artifactId>launch4j-maven-plugin</artifactId>
+        <version>1.7.21</version>
+        <executions>
+          <execution>
+            <id>l4j-clui</id>
+            <phase>package</phase>
+            <goals>
+              <goal>launch4j</goal>
+            </goals>
+            <configuration>
+              <headerType>gui</headerType>
+              <jar>${project.build.directory}/${project.artifactId}-${project.version}-shaded.jar</jar>
+              <outfile>${project.build.directory}/${project.name}.exe</outfile>
+              <downloadUrl>http://java.com/download</downloadUrl>
+              <classPath>
+                <mainClass>${project.mainClass}</mainClass>
+                <preCp>anything</preCp>
+              </classPath>
+              <icon>src/main/resources/res/app-icon.ico</icon>
+              <jre>
+                <minVersion>1.8.0</minVersion>
+                <jdkPreference>preferJre</jdkPreference>
+              </jre>
+              <versionInfo>
+                <fileVersion>1.0.0.0</fileVersion>
+                <txtFileVersion>${project.version}</txtFileVersion>
+                <fileDescription>${project.name}</fileDescription>
+                <copyright>${project.inceptionYear} - http://snapgames.fr</copyright>
+                <productVersion>1.0.0.0</productVersion>
+                <txtProductVersion>1.0.0.0</txtProductVersion>
+                <productName>${project.name}</productName>
+                <companyName>SnapGames</companyName>
+                <internalName>${project.name}</internalName>
+                <originalFilename>${project.name}.exe</originalFilename>
+              </versionInfo>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
       <!-- Release -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
