--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,23 @@
           <encoding>UTF-8F</encoding>
         </configuration>
       </plugin>
+
+      <!-- Build the minimalist JAR without dependencies (Normal Edition) -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.0.2</version>
+        <configuration>
+          <archive>
+            <index>true</index>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>${mainClass}</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+
       <!-- Shaded jar with all dependencies -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -127,7 +144,7 @@
           <shadedClassifierName>shaded</shadedClassifierName>
           <transformers>
             <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-              <mainClass>${mainClass}</mainClass>
+              <mainClass>${project.mainClass}</mainClass>
             </transformer>
             <!--transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
                         <resource>src/main/resources/res</resource>
@@ -145,6 +162,7 @@
           </execution>
         </executions>
       </plugin>
+
       <!-- create a Windows EXE -->
       <!-- https://github.com/lukaszlenart/launch4j-maven-plugin/blob/master/src/main/resources/README.adoc -->
       <!-- see http://launch4j.sourceforge.net/ -->
