--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,23 @@
   <build>
     <finalName>${project.artifactId}-${project.version}</finalName>
     <plugins>
+       <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+          </configuration>
+        </plugin>
+      
+      <!-- Compute coverage -->
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.3-SNAPSHOT</version>
+      </plugin>
+      
       <!-- Sources -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
