--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,18 @@
         <artifactId>maven-surefire-report-plugin</artifactId>
         <version>2.22.0</version>
       </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <!-- select non-aggregate reports -->
+              <report>report</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
     </plugins>
   </reporting>
 </project>
