--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,22 +8,17 @@
             "console": "internalConsole",
             "stopOnEntry": false,
             "mainClass": "fr.snapgames.bgf.App",
-<<<<<<< HEAD
-            "args": "",
-=======
             "args": [
                 "d=2",
                 "w=320",
                 "h=200",
                 "s=2.5"
             ],
->>>>>>> branch 'develop' of git@github.com:SnapGames/basic-game-framework.git
             "projectName": "basic-game-framework"
-<<<<<<< HEAD
         },
         {
             "type": "java",
-            "name": "CodeLens (Launch) - App",
+            "name": "CodeLens (Launch) - App Test",
             "request": "launch",
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
@@ -31,8 +26,6 @@
             "mainClass": "fr.snapgames.bgf.test.App",
             "args": "",
             "projectName": "basic-game-framework"
-=======
->>>>>>> branch 'develop' of git@github.com:SnapGames/basic-game-framework.git
         }
     ]
 }
