Add curl dependency

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
 
 # install coverage Codacy push tool
 before_install:
-  - sudo apt-get install jq
+  - sudo apt-get install jq curl
   - wget -O ~/codacy-coverage-reporter-assembly-latest.jar $(curl https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets[0].browser_download_url')
 
 # Push coverage to Codacy
