--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,5 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
-
-# install coverage Codacy push tool
-before_install:
-  - sudo apt-get install jq curl
-  - wget -O ~/codacy-coverage-reporter-assembly-latest.jar $(curl https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets[0].browser_download_url')
-
-# Push coverage to Codacy
-after_success:
-  - java -jar ~/codacy-coverage-reporter-assembly-latest.jar report -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
+  - export CODACY_PROJECT_TOKEN=135c1ffb1739410b8fe43e47d74f6ab4
+  - export CODACY_API_TOKEN=qyvo95RHXOdugnmevxkp
