--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
-  - export CODACY_PROJECT_TOKEN=135c1ffb1739410b8fe43e47d74f6ab4
-  - export CODACY_API_TOKEN=qyvo95RHXOdugnmevxkp
+  - export env.CODACY_PROJECT_TOKEN=135c1ffb1739410b8fe43e47d74f6ab4
+  - export env.CODACY_API_TOKEN=qyvo95RHXOdugnmevxkp
