--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,6 @@
   The magic will be seen in the test/resources/features/app.feature file.</description>
   <inceptionYear>2018</inceptionYear>
 
-  <prerequisites>
-    <maven>3.5.3</maven>
-  </prerequisites>
-
   <organization>
     <name>SnapGames</name>
     <url>http://snapgames.fr</url>
@@ -370,7 +366,7 @@
             <configuration>
               <apiToken>${env.CODACY_API_TOKEN}</apiToken>
               <projectToken>${env.CODACY_PROJECT_TOKEN}</projectToken>
-              <coverageReportFile>${project.reporting.outputDirectory}/jacoco.xml</coverageReportFile>
+              <coverageReportFile>target/site/jacoco/jacoco.xml</coverageReportFile>
               <commit>${env.TRAVIS_COMMIT}</commit>
               <codacyApiBaseUrl>https://api.codacy.com</codacyApiBaseUrl>
               <failOnMissingReportFile>false</failOnMissingReportFile>
