--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ language: java
 jdk:
   - oraclejdk8
 
+#sudo: false
+script: mvn clean test install
+
 # Define X11 env. for test execution
 before_script:
   - "export DISPLAY=:99.0"
