--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>fr.snapgames.app</groupId>
   <artifactId>basic-game-framework</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Basic Game Framework</name>
@@ -60,7 +60,7 @@
     <connection>scm:git:git@github.com:snapgames/basic-game-framework.git</connection>
     <developerConnection>scm:git:git@github.com:snapgames/basic-game-framework.git</developerConnection>
     <url>scm:git:https://github.com/snapgames/basic-game-framework</url>
-    <tag>0.0.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <distributionManagement>
