--- a/pom.xml
+++ b/pom.xml
@@ -174,13 +174,13 @@
           <encoding>utf-8</encoding>
           <stylesheet>maven</stylesheet>
           <overview>${project.basedir}/README.md</overview>
-          <!--doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>
+          <doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>
           <docletArtifact>
             <groupId>ch.raffael.pegdown-doclet</groupId>
             <artifactId>pegdown-doclet</artifactId>
             <version>1.3</version>
           </docletArtifact>
-          <useStandardDocletOptions>true</useStandardDocletOptions-->
+          <useStandardDocletOptions>true</useStandardDocletOptions>
         </configuration>
         <executions>
           <execution>
