feature() Add Sound System and organize packages
- Add SoundClip and SoundCountrol,
- Add a ResourceManager to manage images and sounds resources,
- Add new images a red and a blue balls to replace square,
- Add a Boïng sound to the Manager, to be played on collision.
- Add the play of the sound on player border collision.

Fix #7

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
             "stopOnEntry": false,
-            "mainClass": "fr.snapgames.bgf.App",
+            "mainClass": "fr.snapgames.bgf.core.App",
             "args": [
                 "d=2",
                 "w=320",
