--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<project.mainClass>fr.snapgames.bgf.core.App</project.mainClass>
+		<project.mainClass>fr.snapgames.bgf.core.Game</project.mainClass>
 	</properties>
 
 	<dependencies>
